...
import UIKit

final class TextTableViewCell: UITableViewCell {

	// MARK: Variables

	let identifier: String = "textTableViewCell"
	private let textStackViewSpacing: CGFloat = 20.0
	private let mainBackgroundViewBorderWidth: CGFloat = 3.0
	private let mainBackgroundViewCornerRadius: CGFloat = 20.0
	private let mainBackgroundViewAnchors: CGFloat = 20.0
	private let textStackViewAnchors: CGFloat = 20.0
	private let nameLableFontSize: CGFloat = 25.0
...
