...
import UIKit

final class ImageTableViewCell: UITableViewCell {

	// MARK: Variables

	let identifier: String = "imageTableViewCell"
	private let mainBackgroundViewAnchors: CGFloat = 20.0
	private let mainStackViewAnchors: CGFloat = 20.0
	private let mainImageViewAnchors: CGFloat = 120.0
	private let mainBackgroundViewBorderWidth: CGFloat = 3.0
	private let mainStackViewSpacing: CGFloat = 20.0
	private let mainBackgroundViewCornerRadius: CGFloat = 20.0
...
